--- a/assets/less/site/site-variables.less
+++ b/assets/less/site/site-variables.less
@@ -20,7 +20,7 @@
 
 @body-bg:               @white;
 @text-color:            @gray-dark;
-@header-height:			271px;
+@header-height:			250px;
 
 // Links
 // -------------------------
