--- a/assets/less/site/styles-on-our-terms.less
+++ b/assets/less/site/styles-on-our-terms.less
@@ -19,19 +19,4 @@
 // Type styling
 @import "widgets.less";
 @import "features.less";
-
-// Hacky
-
-// .panel-group { 
-
-// 	.panel-default > .panel-heading + .panel-collapse .panel-body {
-// 		border-top: none;
-// 	}
-// 	.panel {
-// 		padding-bottom: 0;
-// 	}
-
-// 	.panel-heading {
-// 		margin-bottom: 0;
-// 	}
-// }
+`
